# trivialsec-trivialscan-summaries

./: .autoenv.zsh  .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  Dockerfile  Dockerfile-runner  LICENSE.md  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  trivialscan-summaries.code-workspace
plans/: Dev-backend.conf  Prod-backend.conf  _locals.tf  _vars.tf  iam.tf  lambda.tf  main.tf  outputs.tf  remotes.tf
src/: app.py  internals.py
src/services/: aws.py
